[tool.poetry]
name = "dqn-atari"
version = "0.1.0"
description = ""
authors = ["jakem <mazurkiewiczj@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
gym = "^0.26.2"
matplotlib = "^3.8.4"
common = "^0.1.2"
opencv-python = "^4.9.0.80"
ale = "^0.8.4"
install = "^1.3.5"
ale-py = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
